--- a/Front/src/app/demo/pages/authentication/auth-login/auth-login.component.html
+++ b/Front/src/app/demo/pages/authentication/auth-login/auth-login.component.html
@@ -12,11 +12,11 @@
           </div>
           <div class="form-group mb-3">
             <label class="form-label" for="email">User Name or Email Address </label>
-            <input type="email" class="form-control" id="email" placeholder="Email Address" value="info@codedthemes.com" />
+            <input type="email" class="form-control" id="email" placeholder="Email Address" name="username" [(ngModel)]= "model.username"/>
           </div>
           <div class="form-group mb-3">
             <label class="form-label" for="password">Password</label>
-            <input type="password" class="form-control" id="password" placeholder="Password" value="123456789" />
+            <input type="password" class="form-control" id="password" placeholder="Password" name="password" [(ngModel)]= "model.password" />
           </div>
           <div class="d-flex mt-1 justify-content-between">
             <div class="form-check">
@@ -26,7 +26,7 @@
             <h5 class="text-secondary f-w-400"><a href="javascript:">Forgot Password?</a></h5>
           </div>
           <div class="d-grid mt-4">
-            <button type="button" class="btn btn-primary">Login</button>
+            <button (click)="loginUser()" type="button" class="btn btn-primary">Login</button>
           </div>
           
             
