--- a/Front/src/app/demo/component/basic-component/color/color.component.html
+++ b/Front/src/app/demo/component/basic-component/color/color.component.html
@@ -1,36 +1,105 @@
-<div class="row">
-  <!-- [ Typography ] start -->
-  <div class="col-sm-12">
-    <app-card cardTitle="Background Color">
-      <div class="row g-1">
-        <div class="col-md-12 mb-3">
-          <div class="p-3 color-block bg-blue-100" data-clipboard-text="bg-blue-100">bg-blue-100</div>
-          <div class="p-3 color-block bg-blue-200" data-clipboard-text="bg-blue-200">bg-blue-200</div>
-          <div class="p-3 color-block bg-blue-300" data-clipboard-text="bg-blue-300">bg-blue-300</div>
-          <div class="p-3 color-block bg-blue-400" data-clipboard-text="bg-blue-400">bg-blue-400</div>
-          <div class="p-3 color-block bg-blue-500" data-clipboard-text="bg-blue-500">bg-blue-500</div>
-          <div class="p-3 color-block bg-blue-600" data-clipboard-text="bg-blue-600">bg-blue-600</div>
-          <div class="p-3 color-block bg-blue-700" data-clipboard-text="bg-blue-700">bg-blue-700</div>
-          <div class="p-3 color-block bg-blue-800" data-clipboard-text="bg-blue-800">bg-blue-800</div>
-          <div class="p-3 color-block bg-blue-900" data-clipboard-text="bg-blue-900">bg-blue-900</div>
-        </div>
-      </div>
-    </app-card>
-    <app-card cardTitle="Text Color" cardClass="color-card">
-      <div class="row g-1">
-        <div class="col-md-12 mb-3">
-          <div class="p-3 color-block text-blue-100" data-clipboard-text="text-blue-100">text-blue-100</div>
-          <div class="p-3 color-block text-blue-200" data-clipboard-text="text-blue-200">text-blue-200</div>
-          <div class="p-3 color-block text-blue-300" data-clipboard-text="text-blue-300">text-blue-300</div>
-          <div class="p-3 color-block text-blue-400" data-clipboard-text="text-blue-400">text-blue-400</div>
-          <div class="p-3 color-block text-blue-500" data-clipboard-text="text-blue-500">text-blue-500</div>
-          <div class="p-3 color-block text-blue-600" data-clipboard-text="text-blue-600">text-blue-600</div>
-          <div class="p-3 color-block text-blue-700" data-clipboard-text="text-blue-700">text-blue-700</div>
-          <div class="p-3 color-block text-blue-800" data-clipboard-text="text-blue-800">text-blue-800</div>
-          <div class="p-3 color-block text-blue-900" data-clipboard-text="text-blue-900">text-blue-900</div>
-        </div>
-      </div>
-    </app-card>
+<section id="enroll" class="appointment section">
+        
+  <div class="container section-title" data-aos="fade-up">
+    <h2>Enroll</h2>
+    <p>
+      Veuillez remplir ce formulaire pour prendre rendez-vous pour un entretien.
+    </p>
   </div>
-  <!-- [ Typography ] end -->
-</div>
+
+
+  <div class="container" data-aos="fade-up" data-aos-delay="100">
+    <form
+      action="forms/appointment.php"
+      method="post"
+      role="form"
+      class="php-email-form"
+    >
+      <div class="row">
+        <div class="col-md-4 form-group">
+          <input
+            type="text"
+            name="name"
+            class="form-control"
+            id="name"
+            placeholder="Your Name"
+            required=""
+          />
+        </div>
+        <div class="col-md-4 form-group mt-3 mt-md-0">
+          <input
+            type="email"
+            class="form-control"
+            name="email"
+            id="email"
+            placeholder="Your Email"
+            required=""
+          />
+        </div>
+        <div class="col-md-4 form-group mt-3 mt-md-0">
+          <input
+            type="tel"
+            class="form-control"
+            name="phone"
+            id="phone"
+            placeholder="Your Phone"
+            required=""
+          />
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4 form-group mt-3">
+          <input
+            type="datetime-local"
+            name="date"
+            class="form-control datepicker"
+            id="date"
+            placeholder="Appointment Date"
+            required=""
+          />
+        </div>
+        <div class="col-md-4 form-group mt-3">
+          <select
+            name="department"
+            id="department"
+            class="form-select"
+            required=""
+          >
+            <option value="">Select Department</option>
+            <option value="Department 1">informatique</option>
+            <option value="Department 2">mecatronique</option>
+            <option value="Department 2">infotronique </option>
+            <option value="Department 3">geie indus</option>
+          </select>
+        </div>
+        <div class="col-md-4 form-group mt-3">
+          <select
+            name="doctor"
+            id="doctor"
+            class="form-select"
+            required=""
+          >
+            <option value="">niveau d'etude</option>
+            <option value="Doctor 1">1ere</option>
+            <option value="Doctor 2">2eme</option>
+            <option value="Doctor 3">3eme</option>
+          </select>
+        </div>
+      </div>
+
+      <div class="form-group mt-3">
+        <textarea
+          class="form-control"
+          name="message"
+          rows="5"
+          placeholder="Motivation (Optional)"
+        ></textarea>
+      </div>
+      
+      
+      
+    </form>
+  </div>
+
+</section>
+
