--- a/Front/src/app/demo/pages/authentication/auth-register/auth-register.component.html
+++ b/Front/src/app/demo/pages/authentication/auth-register/auth-register.component.html
@@ -67,14 +67,13 @@
         <div class="col my-1">
           <p class="m-0">
             Copyright ©
-            <a href="https://codedthemes.com/" target="_blank">CodedThemes</a>
           </p>
         </div>
         <div class="col-auto my-1">
           <ul class="list-inline footer-link mb-0">
-            <li class="list-inline-item"><a href="https://codedthemes.com/" target="_blank">Home</a></li>
-            <li class="list-inline-item"><a href="https://codedthemes.com/privacy-policy/" target="_blank">Privacy Policy</a></li>
-            <li class="list-inline-item"><a href="https://codedthemes.support-hub.io/" target="_blank">Contact us</a></li>
+            <li class="list-inline-item"><a href="https://codedthemes.com/" target="_blank" rel="noopener noreferrer" >Home</a></li>
+            <li class="list-inline-item"><a href="https://codedthemes.com/privacy-policy/" target="_blank" rel="noopener noreferrer">Privacy Policy</a></li>
+            <li class="list-inline-item"><a href="https://codedthemes.support-hub.io/" target="_blank" rel="noopener noreferrer">Contact us</a></li>
           </ul>
         </div>
         <!-- </div> -->
