--- a/Front/src/app/demandeclubadmin/demandeclubadmin.component.scss
+++ b/Front/src/app/demandeclubadmin/demandeclubadmin.component.scss
@@ -43,3 +43,30 @@
 .bg-danger {
   background-color: #dc3545 !important;
 }
+/* Style pour les boutons */
+.btn-sm {
+  padding: 0.25rem 0.5rem;
+  font-size: 0.875rem;
+  margin: 0 2px;
+}
+
+.btn-primary {
+  background-color: #0d6efd;
+  border-color: #0d6efd;
+}
+
+.btn-info {
+  background-color: #0dcaf0;
+  border-color: #0dcaf0;
+  color: white;
+}
+
+/* Espacement entre les boutons */
+.me-2 {
+  margin-right: 0.5rem !important;
+}
+
+/* Style pour les icônes */
+.bi {
+  margin-right: 4px;
+}
