--- a/Front/src/app/accueil/accueil.component.html
+++ b/Front/src/app/accueil/accueil.component.html
@@ -63,6 +63,7 @@
             </div>
         </section>
 
+
         <!-- Services Section -->
         <section id="services" class="services section">
             <div class="container section-title">
@@ -70,82 +71,8 @@
                 <p>La liste des clubs actifs de l'ENICarthage</p>
             </div>
 
-            <div class="container">
-                <div class="row gy-4">
-                    <div class="col-lg-4 col-md-6">
-                        <div class="service-item position-relative">
-                            <div class="icon">
-                                <img src="assets/images/cme.png" alt="Club Mécatronique">
-                            </div>
-                            <h3>Club Mécatronique</h3>
-                            <p>
-                                Le Club Mécatronique ENICarthage est le premier club de mécatronique fondé en 2010 par des étudiants à l'Ecole Nationale d'Ingénieurs de Carthage avec pour vocation de développer, concevoir et réaliser des systèmes mécatroniques.
-                            </p>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-4 col-md-6">
-                        <div class="service-item position-relative">
-                            <div class="icon">
-                                <img src="assets/images/melkart.png" alt="Club Melkart">
-                            </div>
-                            <h3>MELKART</h3>
-                            <p>
-                                Ce club a été créé en 2012. C'est une association estudiantine à travers laquelle les étudiants font leurs premiers pas vers la vie professionnelle.
-                            </p>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-4 col-md-6">
-                        <div class="service-item position-relative">
-                            <div class="icon">
-                                <img src="assets/images/ieee.png" alt="IEEE ENICarthage">
-                            </div>
-                            <h3>IEEE ENICarthage</h3>
-                            <p>
-                                L'IEEE est la plus grande association professionnelle au monde dédiée à l'avancement de l'innovation technologique et de l'excellence au profit de l'humanité.
-                            </p>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-4 col-md-6">
-                        <div class="service-item position-relative">
-                            <div class="icon">
-                                <img src="assets/images/enactus.png" alt="ENACTUS">
-                            </div>
-                            <h3>ENACTUS</h3>
-                            <p>
-                                Enactus est une organisation non gouvernementale internationale à but non lucratif, créée en 1975 aux USA.
-                            </p>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-4 col-md-6">
-                        <div class="service-item position-relative">
-                            <div class="icon">
-                                <img src="assets/images/cpc.png" alt="CPC Enicarthage">
-                            </div>
-                            <h3>CPC Enicarthage</h3>
-                            <p>
-                                Le CPC ENICarthage est une organisation à but non lucratif affiliée à l'École Nationale d'Ingénieurs de Carthage (ENICarthage).
-                            </p>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-4 col-md-6">
-                        <div class="service-item position-relative">
-                            <div class="icon">
-                                <img src="assets/images/mtc.png" alt="Microsoft Tech Club">
-                            </div>
-                            <h3>Microsoft Tech Club Enicarthage</h3>
-                            <p>
-                                Le Club Microsoft a pour mission principale de vous former et de renforcer vos compétences pour vous préparer au mieux à la vie professionnelle.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
+          <app-club></app-club>
+        
 
 
         <app-creationclub></app-creationclub>
@@ -210,9 +137,8 @@
                 </form>
             </div>
         </section>
-    </main>
+   
 
 
 
-</body>
-</html>
+
