--- a/Front/src/app/accueil/accueil.component.html
+++ b/Front/src/app/accueil/accueil.component.html
@@ -71,7 +71,7 @@
                 <p>La liste des clubs actifs de l'ENICarthage</p>
             </div>
 
-          <app-club></app-club>
+          <app-club-accueil></app-club-accueil>
         
 
 
