--- a/Front/src/app/clubaccueil/clubaccueil.component.html
+++ b/Front/src/app/clubaccueil/clubaccueil.component.html
@@ -5,17 +5,13 @@
       {{ error }}
     </div>
 
-    <!-- Liste des clubs -->
+    <!-- Liste des clubs simplifiée -->
     <div *ngFor="let club of clubs" class="col-md-4 mb-4">
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">{{ club.name }}</h5>
           <p class="card-text">
-            <strong>Spécialité:</strong>
-            {{ club.specialty }}
-            <br />
-            <strong>Statut:</strong>
-            {{ club.status }}
+            <strong>Spécialité:</strong> {{ club.specialty }}
           </p>
         </div>
       </div>
@@ -23,7 +19,7 @@
 
     <!-- Aucun club -->
     <div *ngIf="!loading && clubs.length === 0 && !error" class="col-12">
-      <div class="alert alert-info">Aucun club disponible dans le système.</div>
+      <div class="alert alert-info">Aucun club disponible</div>
     </div>
   </div>
 </div>
